# Garbage-AI-Suite

./: README.md  pyproject.toml
autolabel/: README.md  pyproject.toml
autolabel/src/autolabel_context/: __init__.py
autolabel/src/autolabel_context/api/: __init__.py
autolabel/src/autolabel_context/api/cli/: __init__.py  main.py
autolabel/src/autolabel_context/application/: __init__.py
autolabel/src/autolabel_context/application/assembler/: __init__.py  label_assembler.py
autolabel/src/autolabel_context/application/command/: __init__.py  run_autolabel_cmd.py
autolabel/src/autolabel_context/application/dto/: __init__.py  autolabel_dto.py
autolabel/src/autolabel_context/application/handler/: __init__.py  run_autolabel_handler.py
autolabel/src/autolabel_context/domain/: __init__.py
autolabel/src/autolabel_context/domain/model/: __init__.py
autolabel/src/autolabel_context/domain/repository/: __init__.py  i_engine_repository.py  i_label_store.py
autolabel/src/autolabel_context/domain/service/: __init__.py  engine_selector.py  quality_gate.py
autolabel/src/autolabel_context/event/: __init__.py  autolabel_finished.py
autolabel/src/autolabel_context/infrastructure/: __init__.py
autolabel/src/autolabel_context/infrastructure/engine/: __init__.py  faster_rcnn_engine.py  i_detection_engine.py  vlm_engine.py  yolo_engine.py
autolabel/src/autolabel_context/infrastructure/persistence/: __init__.py  engine_repository_impl.py  file_label_store.py
autolabel/src/garbage_autolabel/: __init__.py
autolabel/src/garbage_autolabel/application/: __init__.py
autolabel/src/garbage_autolabel/application/ports/: __init__.py
autolabel/src/garbage_autolabel/application/usecases/: __init__.py  auto_label_dataset.py
autolabel/src/garbage_autolabel/domain/: __init__.py
autolabel/src/garbage_autolabel/domain/atoms/: __init__.py  detection_atoms.py
autolabel/src/garbage_autolabel/entry/: __main__.py
autolabel/src/garbage_autolabel/infrastructure/: __init__.py
autolabel/src/garbage_autolabel/infrastructure/label_formats/: __init__.py
autolabel/src/garbage_autolabel/infrastructure/model_adapters/: __init__.py  faster_rcnn_adapter.py  qwen_vl_adapter.py  yolo_adapter.py
autolabel/src/garbage_autolabel/infrastructure/storage/: __init__.py
autolabel/tests/: test_autolabel.py  test_detection_atoms.py  test_e2e_autolabel.py  test_label_atoms.py  test_usecase.py
deploy/: README.md  pyproject.toml
deploy/src/deploy_context/api/cli/: main.py
deploy/src/deploy_context/application/: __init__.py
deploy/src/deploy_context/application/assembler/: deploy_assembler.py
deploy/src/deploy_context/application/command/: start_runtime_cmd.py
deploy/src/deploy_context/application/dto/: __init__.py  deploy_dto.py
deploy/src/deploy_context/application/handler/: start_runtime_handler.py
deploy/src/deploy_context/domain/: __init__.py
deploy/src/deploy_context/domain/event/: __init__.py  item_classified.py
deploy/src/deploy_context/domain/repository/: __init__.py  i_device_io.py
deploy/src/deploy_context/domain/service/: __init__.py  packet_encoder.py  stability_judge.py
deploy/src/deploy_context/infrastructure/: __init__.py
deploy/src/deploy_context/infrastructure/device/: __init__.py  camera_opencv.py  serial_pyserial.py
deploy/src/deploy_context/infrastructure/runtime/: __init__.py  i_inference_runtime.py  rknn_runtime.py  yolo_runtime.py
deploy/src/garbage_deploy/: __init__.py
deploy/src/garbage_deploy/application/: __init__.py
deploy/src/garbage_deploy/application/ports/: __init__.py
deploy/src/garbage_deploy/domain/: __init__.py
deploy/src/garbage_deploy/entry/: __init__.py  __main__.py
deploy/src/garbage_deploy/infrastructure/: __init__.py
deploy/tests/: test_deploy.py  test_detection_atoms.py  test_e2e_deploy.py
shared/: README.md  pyproject.toml
shared/src/garbage_shared/: __init__.py
shared/src/garbage_shared/config_loader/: __init__.py  config_loader.py
shared/src/garbage_shared/contracts_models/: __init__.py  bbox_label.py  inference.py  model_manifest.py
shared/src/garbage_shared/observability/: __init__.py  logger.py
shared/src/garbage_shared/utils/: __init__.py  file_helpers.py
shared/src/garbage_shared/workflow_engine/: __init__.py  workflow_engine.py
shared/src/shared_kernel/: __init__.py
shared/src/shared_kernel/config/: __init__.py  loader.py
shared/src/shared_kernel/domain/: __init__.py  annotation.py  base.py  mapping.py  taxonomy.py
shared/src/shared_kernel/utils/: __init__.py  fs.py  logging_setup.py  time_utils.py
train/: README.md  pyproject.toml
train/src/garbage_train/: __init__.py
train/src/garbage_train/application/: __init__.py
train/src/garbage_train/entry/: __main__.py
train/src/garbage_train/infrastructure/: __init__.py
train/src/train_context/: __init__.py
train/src/train_context/api/: __init__.py
train/src/train_context/api/cli/: __init__.py  (+1 more)
train/src/train_context/application/: __init__.py
train/src/train_context/domain/: __init__.py
train/src/train_context/infrastructure/: __init__.py
train/tests/: __init__.py  test_e2e_training.py  test_infrastructure.py  test_train_usecase.py  test_training.py  test_training_advanced.py
(+131 files in other folders)
