[project]
name = "autolabel-context"
version = "2.0.0"
description = "AutoLabel Context - Automatic image labeling with YOLO, Faster R-CNN, and VLM engines"
requires-python = ">=3.10"
dependencies = [
    "shared-kernel",
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "openai>=1.0",
    "tqdm>=4.0",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
autolabel = "autolabel_context.api.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autolabel_context"]
