[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garbage-deploy"
version = "0.1.0"
description = "Deployment module for Garbage-AI-Suite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Garbage-AI-Suite Team"}
]
dependencies = [
    "garbage-shared",
    "opencv-python>=4.8",
    "pyserial>=3.5",
    "pyyaml>=6.0",
]

[project.scripts]
garbage-deploy = "garbage_deploy.entry.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["garbage_deploy*"]

[tool.architect]
source_dirs = ["src/garbage_shared"]
root_dirs = ["src/garbage_train", "src/garbage_deploy", "src/garbage_autolabel"]
ignore_patterns = ["tests/*", "**/test_*.py"]
