[project]
name = "deploy-context"
version = "2.0.0"
description = "Deploy Context - AI-based garbage classification deployment system"
requires-python = ">=3.10"

dependencies = [
    "shared-kernel",
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "pyserial>=3.5",
]

[project.scripts]
deploy = "deploy_context.api.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
